# petrorag

./: .gitignore
services/: .env.dev  docker-compose.yml
services/chat_svc/: .env.dev  Dockerfile  Makefile  main.py  pyproject.toml
services/chat_svc/chat_svc/: DanhMuc_ObjectType.xlsx  agent.py  app.py  settings.py
services/chat_svc/chat_svc/data/: common_question.xlsx
services/chat_svc/chat_svc/routes/: chat.py
services/chat_svc/chat_svc/tools/: find_common_question.py  find_object_info.py
services/fe_svc/: .env.dev  Dockerfile  Makefile  app.py  pyproject.toml
services/fe_svc/fe_svc/: global_css.py  settings.py
services/fe_v2/: package-lock.json  package.json
services/fe_v2/src/app/: globals.css  layout.tsx
